# pidgan

./: .gitignore  CITATION.bib  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: style.yml  tests.yml
requirements/: advanced.txt  base.txt  hep.txt  lamarr.txt  standard.txt  style.txt  tests.txt
scripts/: Snakefile  initial_setup.py  opt_pidgan_algorithm.py  optimize_ModelGANv0.py  prepare_dataset.py  train_ANN_isMuon.py  train_GAN_GlobalPID-im.py  train_GAN_GlobalPID-nm.py  train_GAN_Muon.py  train_GAN_Rich.py  train_GlobalMuonIdGAN.py  train_GlobalPIDGAN.py  train_GlobalPIDhGAN.py  train_GlobalPIDmuGAN.py  train_MuonGAN.py  train_RichGAN.py  train_isMuonANN.py  utils_argparser.py  utils_plot.py  utils_training.py
scripts/config/: config.py  selections.yml  snakemake_config.yml  variables.yml
scripts/exports/: Snakefile  deploy_ann_models.py  deploy_gan_models.py
scripts/exports/config/: snakemake_config.yml
scripts/exports/cpipelines/: full_pipelines.C
scripts/exports/tests/: test.py  utils.py  utils_pipe.py  utils_plot.py
scripts/utils/: utils_argparser.py  utils_plot.py  utils_training.py
src/pidgan/algorithms/: BceGAN.py  BceGAN_ALP.py  BceGAN_GP.py  CramerGAN.py  GAN.py  LSGAN.py  WGAN.py  WGAN_ALP.py  WGAN_GP.py  __init__.py  lipschitz_regularizations.py
src/pidgan/algorithms/k2/: BceGAN.py  BceGAN_ALP.py  BceGAN_GP.py  CramerGAN.py  GAN.py  LSGAN.py  WGAN.py  WGAN_ALP.py  WGAN_GP.py
src/pidgan/algorithms/k3/: BceGAN.py  BceGAN_ALP.py  BceGAN_GP.py  CramerGAN.py  GAN.py  LSGAN.py  WGAN.py  WGAN_ALP.py  WGAN_GP.py  lipschitz_regularizations.py
src/pidgan/callbacks/: HopaasReporter.py  __init__.py  schedulers.py
src/pidgan/callbacks/schedulers/: LearnRateBaseScheduler.py  LearnRateCosineDecay.py  LearnRateExpDecay.py  LearnRateInvTimeDecay.py  LearnRatePiecewiseConstDecay.py  LearnRatePolynomialDecay.py  __init__.py
src/pidgan/callbacks/schedulers/k2/: LearnRateBaseScheduler.py  LearnRateCosineDecay.py  LearnRateExpDecay.py  LearnRateInvTimeDecay.py  LearnRatePiecewiseConstDecay.py  LearnRatePolynomialDecay.py
src/pidgan/callbacks/schedulers/k3/: LearnRateBaseScheduler.py  LearnRateCosineDecay.py  LearnRateExpDecay.py  LearnRateInvTimeDecay.py  LearnRatePiecewiseConstDecay.py  LearnRatePolynomialDecay.py
src/pidgan/layers/: Discriminator.py  Generator.py  Referee.py
src/pidgan/metrics/: Accuracy.py  BaseMetric.py  BinaryCrossentropy.py  JSDivergence.py  KLDivergence.py  MeanAbsoluteError.py  MeanSquaredError.py  RootMeanSquaredError.py  WassersteinDistance.py  __init__.py
src/pidgan/metrics/k2/: Accuracy.py  BaseMetric.py  BinaryCrossentropy.py  JSDivergence.py  KLDivergence.py  MeanAbsoluteError.py  MeanSquaredError.py  RootMeanSquaredError.py  WassersteinDistance.py
src/pidgan/metrics/k3/: Accuracy.py  BaseMetric.py  BinaryCrossentropy.py  JSDivergence.py  KLDivergence.py  MeanAbsoluteError.py  MeanSquaredError.py  RootMeanSquaredError.py  WassersteinDistance.py
src/pidgan/models/: GAN.py  WGAN_ALP.py  __init__.py
src/pidgan/models/gan/: BceGAN.py  CramerGAN.py  WGAN.py  WGAN_GP.py
src/pidgan/optimization/callbacks/: HopaasPruner.py  __init__.py
src/pidgan/optimization/scores/: BaseScore.py  EMDistance.py  KSDistance.py  __init__.py
src/pidgan/players/classifiers/: AuxClassifier.py  AuxMultiClassifier.py  Classifier.py  MultiClassifier.py  ResClassifier.py  ResMultiClassifier.py  __init__.py
src/pidgan/players/discriminators/: AuxDiscriminator.py  Discriminator.py  ResDiscriminator.py  __init__.py
src/pidgan/players/discriminators/k2/: AuxDiscriminator.py  Discriminator.py  ResDiscriminator.py
src/pidgan/players/generators/: Generator.py  ResGenerator.py  __init__.py
src/pidgan/utils/: __init__.py
src/pidgan/utils/checks/: __init__.py  checkMetrics.py  checkOptimizer.py
src/pidgan/utils/preprocessing/: __init__.py  invertColumnTransformer.py
src/pidgan/utils/reports/: HPSingleton.py  getSummaryHTML.py
tests/algorithms/: test_BceGAN.py  test_BceGAN_ALP.py  test_BceGAN_GP.py  test_CramerGAN.py  test_GAN.py  test_LSGAN.py  test_WGAN.py  test_WGAN_ALP.py  test_WGAN_GP.py
tests/callbacks/: test_HopaasReporter.py
tests/callbacks/schedulers/: test_AttentionDecay.py  test_BaseScheduler.py  test_CosineDecay.py  test_ExponentialDecay.py  test_InverseTimeDecay.py  test_LearnRateBaseScheduler.py  test_LearnRateCosineDecay.py  test_LearnRateExpDecay.py  test_LearnRateInvTimeDecay.py  test_LearnRatePiecewiseConstDecay.py  test_LearnRatePolynomialDecay.py  test_PiecewiseConstantDecay.py  test_PolynomialDecay.py
tests/config/: config.py
tests/metrics/: test_Accuracy_metric.py  test_BinaryCrossentropy_metric.py  test_JSDivergence_metric.py  test_KLDivergence_metric.py  test_MeanAbsoluteError_metric.py  test_MeanSquaredError_metric.py  test_RootMeanSquaredError_metric.py  test_WassersteinDistance_metric.py
tests/optimization/callbacks/: test_HopaasPruner.py
tests/players/classifiers/: test_AuxClassifier.py  test_AuxMultiClassifier.py  test_Classifier.py  test_MultiClassifier.py  test_ResClassifier.py  test_ResMultiClassifier.py
tests/players/discriminators/: test_AuxDiscriminator.py  test_Discriminator.py  test_ResDiscriminator.py
tests/players/generators/: test_Generator.py  test_ResGenerator.py
tests/utils/checks/: test_checkMetrics.py  test_checkOptimizer.py
(+7 files in other folders)
