[build-system]
requires = ["setuptools>=42.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pidgan"
dynamic = ["version"]
description = "GAN-based models to fast-simulate the LHCb PID detectors"
readme = "README.md"
requires-python = ">=3.7, <=3.11"
license = {text = "GPLv3 License"}
authors = [
  {name = "Matteo Barbetti", email = "matteo.barbetti@fi.infn.it"},
  {name = "Lucio Anderlini", email = "lucio.anderlini@fi.infn.it"},
]
keywords = [
  "tensorflow",
  "machine learning",
  "deep learning",
  "generative adversarial nets",
  "lhcb experiment",
  "lamarr",
  "ultra-fast simulation",
  "particle identification",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "tensorflow>=2.7",
  "scikit-learn>=1.0",
  # "hopaas-client",   # to be released on PyPI
]

[project.optional-dependencies]
lamarr = [
  "numpy",
  "scipy",
  "pandas",
  "uproot",
  "scikinC>=0.2.6",
  "matplotlib",
  "html-reports>=0.2",
  "pyyaml",
]
style = [
  "black",
  "flake8",
  "isort[colors]",
]
tests = [
  "pytest>=6.0",
  "pytest-cov",
  "pyyaml",
]

[project.urls]
repository = "https://github.com/mbarbetti/pidgan"

[tool.setuptools.dynamic]
version = {attr = "pidgan.__version__"}

[tool.black]
target-version = ["py37", "py38", "py39", "py310", "py311"]
color = true
skip_magic_trailing_comma = true

[tool.isort]
profile = "black"
known_first_party = ["src", "tests"]
skip_gitignore = true
color_output = true
